--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
           accusantium! Porro possimus officiis optio molestias cupiditate
         </p>
         <div class="cta">
-          <button class="cta-resume" onclick="handleResumeButton()">resume</button>
+          <button class="cta-resume" onclick="handleResumeButton">resume</button>
           <button class="cta-mywork" onclick="location.href = '#work-container'">my work</button>
         </div>
       </div>
@@ -53,10 +53,10 @@
       <div class="social-links">
         <div class="line"></div>
         <div class="social-icons">
-          <i class="flaticon-github" id="github"  onclick="handleGitSocial()"></i>
-          <i class="flaticon-linkedin" id="linkedin"  onclick="handleLinkedInSocial()"></i>
-          <i class="flaticon-medium" id="medium"  onclick="handleMediumSocial()"></i>
-          <i class="flaticon-behance" id="behance"  onclick="handleBehanceSocial()"></i>
+          <i class="flaticon-github" id="github"  onclick="handleGitSocial"></i>
+          <i class="flaticon-linkedin" id="linkedin"  onclick="handleLinkedInSocial"></i>
+          <i class="flaticon-medium" id="medium"  onclick="handleMediumSocial"></i>
+          <i class="flaticon-behance" id="behance"  onclick="handleBehanceSocial"></i>
         </div>
       </div>
     </section>
@@ -180,7 +180,7 @@
         </div>
       </div>
         <div class='readmore'>
-          <button class="cta-resume">More Blogs </button>
+          <button class="cta-resume" id="medium" onclick="handleMediumSocial">More Blogs </button>
         </div>
 
     </section>
